Fix blue text color on ios mobile for answer button in one by one quzzes only (for bulk quizzes - disabled color)

--- a/src/components/QuestionWithAnswers.css
+++ b/src/components/QuestionWithAnswers.css
@@ -31,7 +31,6 @@ main .answer-btns {
 }
 
 main .answer-btns button {
-  color: black;
   justify-content: space-between;
   align-items: center;
   background-color: #c5dbd4;
